# ForschEule

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: forscheule.service  forscheule.timer
documentation/: 01_project_overview.html  01_project_overview.md  02_pipeline_workflow.html  02_pipeline_workflow.md  03_tuning_guide.html  03_tuning_guide.md  04_setup_and_usage.html  04_setup_and_usage.md
forscheule/: __init__.py  __main__.py  config.py  pipeline.py
forscheule/api/: app.py
forscheule/db/: repo.py  schema.py
forscheule/rank/: dedup.py  embed.py  score.py
forscheule/sources/: arxiv.py  http_client.py  pubmed.py
forscheule/summary/: __init__.py  digest.py  per_paper.py  schemas.py
forscheule/templates/: index.html
tests/: test_api.py  test_db.py  test_dedup.py  test_idempotency.py  test_score.py  test_summary.py  test_summary_api.py  test_time_anchoring.py
